Assertion failed when taking snapshot on macosx

Assertion failed: (outfcc == VLC_CODEC_NV12), function Copy, file cvpx.c, line 133.

* thread #1, queue = 'com.apple.main-thread', stop reason = hit program assert
    frame #0: 0x00007ff81f74100e libsystem_kernel.dylib`__pthread_kill + 10
    frame #1: 0x00007ff81f7771ff libsystem_pthread.dylib`pthread_kill + 263
    frame #2: 0x00007ff81f6c2d24 libsystem_c.dylib`abort + 123
    frame #3: 0x00007ff81f6c20cb libsystem_c.dylib`__assert_rtn + 314
  * frame #4: 0x000000010a4cbbfb libcvpx_plugin.dylib`Copy(p_filter=0x0000000122d1bdf0, dst=0x00000001007680b0, src=0x000000010073d390, height=720) at cvpx.c:133:17
    frame #5: 0x000000010a4cb7ee libcvpx_plugin.dylib`CVPX_TO_SW_Filter(p_filter=0x0000000122d1bdf0, src=0x0000000122d1c900) at cvpx.c:180:5
    frame #6: 0x00000001004e6c09 libvlccore.dylib`FilterChainVideoFilter(f=0x0000000122d1bdf0, p_pic=0x0000000122d1c900) at filter_chain.c:430:17
    frame #7: 0x00000001004e6aec libvlccore.dylib`filter_chain_VideoFilter(p_chain=0x0000000122d05150, p_pic=0x0000000101909960) at filter_chain.c:447:17
    frame #8: 0x000000010a4cc439 libcvpx_plugin.dylib`chain_CVPX_Filter(filter=0x00000001018f4960, pic=0x0000000101909960) at cvpx.c:508:12
    frame #9: 0x00000001004e6c09 libvlccore.dylib`FilterChainVideoFilter(f=0x00000001018f4960, p_pic=0x0000000101909960) at filter_chain.c:430:17
    frame #10: 0x00000001004e6aec libvlccore.dylib`filter_chain_VideoFilter(p_chain=0x00000001018f8de0, p_pic=0x0000000101909960) at filter_chain.c:447:17
    frame #11: 0x000000010a4fc1fc libchain_plugin.dylib`Chain(p_filter=0x00000001018e41f0, p_pic=0x0000000101909960) at chain.c:271:12
    frame #12: 0x00000001004db4b0 libvlccore.dylib`ImageWrite(p_image=0x00006000021a8140, p_pic=0x0000000101909960, p_fmt_in=0x00007ff7bfefe0b8, p_fmt_out=0x00007ff7bfefe018) at image.c:442:17
    frame #13: 0x00000001004d098b libvlccore.dylib`picture_Export(p_obj=0x000000010112f400, pp_image=0x00007ff7bfefe248, p_fmt=0x0000000000000000, p_picture=0x0000000101909960, i_format=543649392, i_override_width=-1, i_override_height=-1, b_crop=false) at picture.c:612:24
    frame #14: 0x000000010049b04c libvlccore.dylib`vout_GetSnapshot(vout=0x000000010112f400, image_dst=0x00007ff7bfefe248, picture_dst=0x00007ff7bfefe250, fmt=0x0000000000000000, type="png", timeout=500000) at video_output.c:419:13
    frame #15: 0x00000001004b2485 libvlccore.dylib`VoutSaveSnapshot(p_vout=0x000000010112f400) at vout_intf.c:419:9
    frame #16: 0x00000001004b1b4d libvlccore.dylib`SnapshotCallback(p_this=0x000000010112f400, psz_cmd="video-snapshot", oldval=vlc_value_t @ 0x00007ff7bfefe298, newval=vlc_value_t @ 0x00007ff7bfefe290, p_data=0x0000000000000000) at vout_intf.c:630:5
    frame #17: 0x00000001004e1aaa libvlccore.dylib`TriggerCallback(obj=0x000000010112f400, var=0x00006000030850e0, name="video-snapshot", prev=vlc_value_t @ 0x00007ff7bfefe2d8) at variables.c:252:9
    frame #18: 0x00000001004e242e libvlccore.dylib`var_TriggerCallback(p_this=0x000000010112f400, psz_name="video-snapshot") at variables.c:874:9
    frame #19: 0x000000010047e831 libvlccore.dylib`vlc_player_vout_TriggerOption(player=0x0000000101805e60, option="video-snapshot") at vout.c:175:5
    frame #20: 0x000000010047e7ec libvlccore.dylib`vlc_player_vout_Snapshot(player=0x0000000101805e60) at vout.c:208:5
    frame #21: 0x000000010dbf1abd libmacosx_plugin.dylib`-[VLCPlayerController takeSnapshot](self=0x0000600003904ea0, _cmd="takeSnapshot") at VLCPlayerController.m:1605:5
    frame #22: 0x000000010db9f241 libmacosx_plugin.dylib`-[VLCMainMenu createVideoSnapshot:](self=0x000000010386d000, _cmd="createVideoSnapshot:", sender=0x000060000292eb50) at VLCMainMenu.m:1200:5
    frame #23: 0x00007ff82247a0ce AppKit`-[NSApplication(NSResponder) sendAction:to:from:] + 288
    frame #24: 0x00007ff82256ec50 AppKit`-[NSMenuItem _corePerformAction] + 413
    frame #25: 0x00007ff82256e972 AppKit`-[NSCarbonMenuImpl performActionWithHighlightingForItemAtIndex:] + 95
    frame #26: 0x00007ff8225b92bf AppKit`-[NSMenu performActionForItemAtIndex:] + 113
    frame #27: 0x00007ff8225b9245 AppKit`-[NSMenu _internalPerformActionForItemAtIndex:] + 82
    frame #28: 0x00007ff8225b908c AppKit`-[NSCarbonMenuImpl _carbonCommandProcessEvent:handlerCallRef:] + 101
    frame #29: 0x00007ff822553222 AppKit`NSSLMMenuEventHandler + 1074
    frame #30: 0x00007ff8284c434d HIToolbox`DispatchEventToHandlers(EventTargetRec*, OpaqueEventRef*, HandlerCallRec*) + 1365
    frame #31: 0x00007ff8284c379c HIToolbox`SendEventToEventTargetInternal(OpaqueEventRef*, OpaqueEventTargetRef*, HandlerCallRec*) + 333
    frame #32: 0x00007ff8284d83a9 HIToolbox`SendEventToEventTarget + 39
    frame #33: 0x00007ff8285362e5 HIToolbox`SendHICommandEvent(unsigned int, HICommand const*, unsigned int, unsigned int, unsigned char, void const*, OpaqueEventTargetRef*, OpaqueEventTargetRef*, OpaqueEventRef**) + 361
    frame #34: 0x00007ff82855b457 HIToolbox`SendMenuCommandWithContextAndModifiers + 46
    frame #35: 0x00007ff82855b405 HIToolbox`SendMenuItemSelectedEvent + 344
    frame #36: 0x00007ff82855b250 HIToolbox`FinishMenuSelection(SelectionData*, MenuResult*, MenuResult*) + 96
    frame #37: 0x00007ff82855bc48 HIToolbox`MenuSelectCore(MenuData*, Point, double, unsigned int, OpaqueMenuRef**, unsigned short*) + 625
    frame #38: 0x00007ff82855b93e HIToolbox`_HandleMenuSelection2 + 456
    frame #39: 0x00007ff822414719 AppKit`_NSHandleCarbonMenuEvent + 215
    frame #40: 0x00007ff822414586 AppKit`_DPSEventHandledByCarbon + 54
    frame #41: 0x00007ff822274e20 AppKit`-[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 3368
    frame #42: 0x00007ff822266d19 AppKit`-[NSApplication run] + 586
    frame #43: 0x00000001000036ba vlc-osx-static`main(i_argc=0, ppsz_argv=0x00007ff7bfeff490) at darwinvlc.m:292:13
    frame #44: 0x000000010001152e dyld`start + 462